fix: Fix firefox table layout bug.

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ table {
 }
 
 tr {
-  position: relative;
+  position: static;
   height: 32px;
 }
 
